--- a/shakestyle.css
+++ b/shakestyle.css
@@ -22,9 +22,12 @@ header {
 	text-align: center;
 }
 
-header p {
+#subtitle {
+	color: #61108E;
+	font-family: serif;
 	font-size: 48px;
 	font-style: italic;
+	
 }
 
 h1 {
@@ -40,15 +43,43 @@ h2 {
 	font-weight: 600;
 }
 
-.main {
-	background-image: url("https://www.cedars-sinai.org/content/dam/cedars-sinai/blog/2020/04/doctors-office-safe.jpg");
-	background-size: cover;
-	opacity: 0.8;
+h3 {
+	color: slateblue;
+	font-family: "Optima";
+	font-size: 36px;
+	
+}
+
+p {
+}
+
+#mainhead {
 	text-align: center;
 	box-sizing: border-box;
 	height: 800px;
-	margin: auto;
 	padding-top: 200px;
+	position: relative;
+}
+
+#mainback {
+	height: 800px;
+}
+
+#abthead {
+  height: 300px;
+	padding-top: 75px;
+	position: relative;
+}
+
+#abtback {
+	height: 300px;
+	opacity: 0.6;
+}
+
+.background {
+	position: absolute;
+	width: 1400px;
+	opacity: 0.8;
 }
 
 .logo {
@@ -56,7 +87,29 @@ h2 {
 	width: 60px;
 }
 
-.welcome {
+.welcome h3 {
 	text-align: center;
+	margin: 20px 60px;
+}
+
+.textual {
+	color: gray;
+	font-family: sans-serif;
+	font-size: 24px;
+	padding: 0 60px;
+}
+
+.quote {
 	margin: 0 20px;
+	border: 3px solid orchid;
+	padding: 20px;
+}
+
+.quote h3 {
+	font-family: "Rubik";
+	font-size: 48px;
+}
+
+#methods {
+	background-color: lavender;
 }
